# UNITTEST

./: CMakeLists.txt  Makefile
docs/: UT_GUIDE_FOR_AI.md
production/: HalGpio.cpp  HalGpio.h  HalTypes.h  Logger.cpp  Logger.h  MotorController.cpp  MotorController.h  SensorManager.cpp  SensorManager.h  SomethingElse.h
test/: test_MotorController.cpp
test/fakes/: HalGpio.h  HalGpio_fake.cpp  HalTypes.h  Logger.h  Logger_fake.cpp  SensorManager.h  SensorManager_fake.cpp  SomethingElse.h  SomethingElse_fake.cpp
test/mocks/: MockHalGpio.h  MockLogger.h  MockSensorManager.h
